--- a/repository.yaml
+++ b/repository.yaml
@@ -1,3 +1,3 @@
-name: 'Lovelace Kindle Screensaver - Max'
+name: 'Lovelace Kindle Screensaver - macmacs'
 url: 'https://github.com/macmacs/hass-lovelace-kindle-screensaver'
 maintainer: 'macmacs'
